Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -86,3 +86,7 @@ ul.share-buttons{
   list-style: none;
   padding: 0;
 }
+
+ul.share-buttons li {
+    padding: 3px 0px;
+}
